# boids-rs

./: Cargo.toml  README.md
examples/: showcase.rs
src/: boid.rs  flock.rs  iter.rs  lib.rs
src/boids/: boid2d.rs  boid3d.rs  convert.rs  limits.rs  mod.rs
